# deep-packet-inspection

./: .ycm_extra_conf.py  CMakeLists.txt  GPL_NOTICE  LICENSE  README.md  build.sh  build_demo.sh  build_demos.sh  install.sh  launch_demo.sh  load_module.sh  prepare_kbuild.sh  unload_module.sh
example/: demo.cpp  pipe_daemon.cpp  pipe_dropper.cpp  pipe_htmlblock.cpp  pipe_printer.cpp
module/: dpi_module.c
module/include/: dpi_module.h  dpi_netfilter.h  dpi_socketio.h  dpi_worker.h
module/src/: dpi_module_main.c  dpi_netfilter.c  dpi_socketio.c  dpi_worker.c
